--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mtg-printables",
+  "homepage": "https://LoganTackett1.github.io/mtg-printables/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "file-saver": "^2.0.5",
+    "gh-pages": "^6.3.0",
     "jspdf": "^3.0.1",
     "jszip": "^3.10.1",
     "react": "^19.1.0",
